--- a/trunk/serial/Makefile
+++ b/trunk/serial/Makefile
@@ -2,7 +2,7 @@ CC = g++
 LINBOX =  -L/usr/local/lib -L/usr/local/lib64 -llinbox -lgivaro -lgmpxx -lgmp -lcblas -llapack
 #CFLAGS = -O3
 
-TARGETS = orig serial-hfk low-mem sparse-linbox serial-hfk-split
+TARGETS = orig serial-hfk low-mem sparse-linbox serial-hfk-split serial-z2z3
 
 all:	$(TARGETS)
 
@@ -15,7 +15,10 @@ low-mem: low-mem.cpp matrix-rep.h
 simple-test: simple-test.cpp simple-mat.h
 	$(CC) -o $@ $(LIBS) $(LINBOX) simple-test.cpp
 
-serial-hfk-split: serial-hfk-split.cpp
+serial-z2z3: serial-z2z3.cpp matrix-z2z3.h
+	$(CC) -o $@ $(LIBS) serial-z2z3.cpp
+
+serial-hfk-split: serial-hfk-split.cpp matrix.h
 	$(CC) -o $@ $(LIBS) serial-hfk-split.cpp
 
 serial-hfk: serial-hfk.cpp
