--- a/parallel/Makefile
+++ b/parallel/Makefile
@@ -1,4 +1,4 @@
-all:	gradings fullv1 boundaries
+all:	gradings fullv1 boundaries boundaries-bc
 
 gradings:	gradings.cpp
 	mpicxx -o gradings gradings.cpp
@@ -8,3 +8,6 @@ fullv1:	fullv1.cpp matrix-z2z3.h reduction-functions.h
 
 boundaries:	boundaries.cpp matrix-z2z3.h reduction-functions.h
 	mpicxx -o boundaries boundaries.cpp
+
+boundaries-bc:	boundaries-bc.cpp matrix-z2z3.h reduction-functions.h
+	mpicxx -o boundaries-bc boundaries-bc.cpp
