--- a/trunk/parallel/Makefile
+++ b/trunk/parallel/Makefile
@@ -1,4 +1,4 @@
-all:	gradings fullv1 boundaries boundaries-bc
+all:	gradings fullv1 boundaries boundaries-bc boundaries-bc-set
 
 gradings:	gradings.cpp
 	mpicxx -o gradings gradings.cpp
@@ -11,3 +11,6 @@ boundaries:	boundaries.cpp matrix-z2z3.h reduction-functions.h
 
 boundaries-bc:	boundaries-bc.cpp matrix-z2z3.h reduction-functions.h
 	mpicxx -o boundaries-bc boundaries-bc.cpp
+
+boundaries-bc-set:	boundaries-bc-set.cpp matrix-z2z3-set.h reduction-functions-set.h
+	mpicxx -o boundaries-bc-set boundaries-bc-set.cpp
