--- a/parallel/Makefile
+++ b/parallel/Makefile
@@ -12,5 +12,8 @@ boundaries:	boundaries.cpp matrix-z2z3.h reduction-functions.h
 boundaries-bc:	boundaries-bc.cpp matrix-z2z3.h reduction-functions.h
 	mpicxx -o boundaries-bc boundaries-bc.cpp
 
+boundaries-openmp:	boundaries-openmp.cpp matrix-z2z3.h reduction-functions.h
+	mpicxx -o boundaries-openmp boundaries-openmp.cpp -fopenmp
+
 boundaries-bc-set:	boundaries-bc-set.cpp matrix-z2z3-set.h reduction-functions-set.h
 	mpicxx -o boundaries-bc-set boundaries-bc-set.cpp
